src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Montserrat", sans-serif;
  text-align: center;
  background: floralwhite;
  color: darkslategray;
}

/* header */
.main-header {
  color: #f5e482;
  height: 100px;
  width: 100vw;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background: linear-gradient(#636363, #a2ab58);
  padding: 15px 0 165px;
  border-radius: 5px;
  margin-top: -5px;
  text-transform: uppercase;
  border-bottom: 1px solid #f5e482;
}
.main-quote {
  font-size: 10px;
  letter-spacing: 1px;
}
.main-task-counter {
  padding-top: 15px;
  border-top: 1px solid #f5e482;
  width: 100vw;
  display: flex;
  justify-content: space-around;
  margin-top: 20px;
  font-size: 20px;
}
.single-task-counter {
  font-size: 10px;
  letter-spacing: 0.8px;
  padding-top: 5px;
  font-weight: 200;
}
.single-task-number {
  padding-top: 5px;
  font-size: 26px;
  font-weight: 200;
}
/* app */

.app-date {
  padding-top: 10px;
}
/* tasks */
.app-todos-container {
  margin-top: 30px;
  list-style: none;
  max-height: 220px;
  overflow: scroll;
}

.app-task-container {
  width: 100vw;
  height: 45px;
  margin-top: 10px;
  line-height: 45px;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
  background: rgba(150, 150, 150, 0.1);
  cursor: pointer;
}
.app-btn-action {
  border: none;
  cursor: pointer;
  font-size: 18px;
  padding: 10px;
  background: none;
}
.app-btn-action:first-of-type {
  padding-right: 20px;
}
.app-task,
.app-task-completed {
  width: 80%;
  display: flex;
  align-items: flex-start;
  padding-left: 30px;
  line-height: 45px;
  font-size: 16px;
  letter-spacing: 1px;
}
.app-task-completed {
  color: gray;
  text-decoration: line-through;
}

/* editing created task input */

.app-task-edit {
  width: 100vw;
  height: 45px;
  margin-top: 10px;
  line-height: 45px;
  background: rgba(150, 150, 150, 0.1);
  display: flex;
}

.app-task-edit-input {
  width: 70%;
  background: #d4cfc3;
  border: none;
  outline: none;
  padding-left: 10px;
  font-size: 16px;
  letter-spacing: 1px;
}

.app-task-edit-button {
  width: 30%;
  background: none;
  cursor: pointer;
  border: none;
  font-size: 20px;
}

/* creating task input */
.app-form {
  position: absolute;
  display: flex;
  justify-content: center;
  width: 100vw;
  bottom: 30px;
  left: 0;
  margin-top: 50vh;
}
.app-form-input {
  font-size: 18px;
  padding: 10px 5px;
  border-radius: 10px;
  border: solid 1px gray;
  outline: none;
  background: #d4cfc3;
}

.app-form-input::placeholder {
  padding-left: 5px;
}

/* adding button */

.app-form-button {
  background: linear-gradient(#636363, #a2ab58);
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 5px;
  margin-left: 10px;
  cursor: pointer;
  color: white;
  outline: none;
}
@media screen and (min-width: 375px) {
  .app-todos-container {
    max-height: 330px;
  }
  /* creating task input */
  .app-form-input {
    padding: 10px 45px 10px 0;
  }
}
@media screen and (min-width: 375px) and (min-height: 812px) {
  .app-todos-container {
    max-height: 440px;
  }
}
@media screen and (min-width: 414px) {
  .main-header {
    padding: 30px 0 200px;
    font-size: 20px;
  }
  .main-quote {
    font-size: 12px;
    letter-spacing: 1px;
  }
  .main-task-counter {
    padding-top: 25px;
    font-size: 25px;
  }
  .single-task-counter {
    font-size: 12px;
  }
  .single-task-number {
    font-size: 28px;
  }

  .app-date {
    padding-top: 10px;
    font-size: 20px;
  }
  /* tasks */
  .app-todos-container {
    margin-top: 10px;
    max-height: 360px;
  }
  .app-btn-action {
    font-size: 22px;
  }
  .app-task,
  .app-task-completed {
    font-size: 20px;
  }
  .app-task-container {
    padding: 30px 0;
  }
  /* editing created task input */

  .app-task-edit {
    height: 60px;
  }

  .app-task-edit-input {
    font-size: 20px;
  }

  .app-task-edit-button {
    font-size: 24px;
  }
  /* creating task input */

  .app-form-input {
    font-size: 22px;
    padding: 15px 10px;
  }

  .app-form-input::placeholder {
    padding-left: 3px;
  }

  /* adding button */

  .app-form-button {
    font-size: 18px;
    padding: 0 6px;
    margin-left: 12px;
  }
}
@media screen and (min-width: 768px) {
  /* header */
  .main-header {
    padding: 30px 0 230px;
    font-size: 26px;
  }
  .main-quote {
    font-size: 16px;
    letter-spacing: 1px;
  }
  .main-task-counter {
    padding-top: 20px;
    font-size: 30px;
  }
  .single-task-counter {
    font-size: 14px;
    letter-spacing: 1px;
  }
  .single-task-number {
    padding-top: 1px;
    font-size: 32px;
  }
  /* app */

  .app-date {
    padding-top: 20px;
    font-size: 26px;
  }
  /* tasks */
  .app-todos-container {
    margin-top: 30px;
    max-height: 540px;
  }

  .app-task-container {
    padding: 40px 0;
  }
  .app-btn-action {
    font-size: 30px;
  }
  .app-task,
  .app-task-completed {
    font-size: 28px;
  }

  /* editing created task input */

  .app-task-edit {
    height: 85px;
  }

  .app-task-edit-input {
    padding: 40px 0 40px 10px;
    font-size: 26px;
  }

  .app-task-edit-button {
    font-size: 32px;
    line-height: 85px;
  }

  /* creating task input */

  .app-form-input {
    font-size: 40px;
    padding: 10px 75px 10px 5px;
  }

  /* adding button */

  .app-form-button {
    font-size: 28px;
    padding: 10px;
  }
}
@media screen and (min-width: 1024px) and (min-height: 1366px) {
  /* header */
  .main-header {
    padding: 30px 0 260px;
    font-size: 30px;
  }
  .main-quote {
    font-size: 18px;
    letter-spacing: 1.5px;
  }
  .main-task-counter {
    padding-top: 20px;
    font-size: 34px;
  }
  .single-task-counter {
    font-size: 20px;
    letter-spacing: 1.5px;
  }
  .single-task-number {
    padding-top: 1px;
    font-size: 36px;
  }
  /* app */

  .app-date {
    padding-top: 30px;
    font-size: 30px;
  }
  /* tasks */
  .app-todos-container {
    margin-top: 60px;
    max-height: 770px;
  }

  .app-task-container {
    padding: 50px 0;
  }
  .app-btn-action {
    font-size: 36px;
  }
  .app-task,
  .app-task-completed {
    font-size: 32px;
    letter-spacing: 1.5px;
  }

  /* editing created task input */

  .app-task-edit {
    height: 100px;
  }

  .app-task-edit-input {
    font-size: 30px;
    letter-spacing: 1.5px;
  }

  .app-task-edit-button {
    font-size: 34px;
  }

  /* creating task input */

  .app-form-input {
    font-size: 48px;
    padding: 10px 135px 10px 5px;
  }

  /* adding button */

  .app-form-button {
    font-size: 32px;
    padding: 20px;
  }
}

